sql/item_sum.h
@@ -172,6 +172,7 @@ class Item_sum_count :public Item_sum_int
   void make_const(longlong count_arg) { count=count_arg; used_table_cache=0; }
   longlong val_int();
   void reset_field();
+  void cleanup();
   void update_field();
   const char *func_name() const { return "count"; }
   Item *copy_or_same(THD* thd);
@@ -428,6 +429,7 @@ class Item_sum_hybrid :public Item_sum
   void min_max_update_str_field();
   void min_max_update_real_field();
   void min_max_update_int_field();
+  void cleanup();
 };
 
 
